ajout des theme de couleurs

--- a/TemplateWPF.csproj
+++ b/TemplateWPF.csproj
@@ -11,4 +11,9 @@
       <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Themes\Colors" />
+      <Folder Include="Themes\Styles" />
+    </ItemGroup>
+
 </Project>
